src/objects/Monthly_Review__c.object
<CustomObject>
    <description>Object used in the Ortho implementation, by the local managers to enter monthly review statements on Account Plans</description>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Used in the Ortho implementation</description>
        <inlineHelpText>Date of review</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ortho_Opportunity__c</fullName>
        <description>Connects the AP with the Monthly Review</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Monthly Reviews</relationshipLabel>
        <relationshipName>Monthly_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quality_of_Accountplan__c</fullName>
        <label>Quality of Accountplan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_of_Accountplan_icon__c</fullName>
        <formula>IMAGE( 
CASE( 
TEXT( Quality_of_Accountplan__c ), 
&quot;1&quot;, &quot;/img/samples/stars_100.gif&quot;, 
&quot;2&quot;, &quot;/img/samples/stars_200.gif&quot;, 
&quot;3&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;4&quot;, &quot;/img/samples/stars_400.gif&quot;, 
&quot;5&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality of Accountplan icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Input__c</fullName>
        <description>Used in the Ortho implementation</description>
        <inlineHelpText>Please enter Review text</inlineHelpText>
        <label>Review Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Monthly Review</label>
    <nameField>
        <label>Monthly Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PreventToChangeMonthlyReviews</fullName>
        <active>true</active>
        <description>Monthly reviews got used in Germany. This rule prevents to edit old records.</description>
        <errorConditionFormula>($User.Profile__c &lt;&gt; &quot;#System: System Administrator&quot;  &amp;&amp; $User.Profile__c &lt;&gt; &quot;System Administrator&quot; )</errorConditionFormula>
        <errorMessage>You&apos;re not allowed to change a Monthly Review</errorMessage>
    </validationRules>
</CustomObject>